# c-dategrep

./: Makefile  Makefile.am  README.md  configure.ac  dategrep.c  dategrep.man  dtgrep.c
man1/: dategrep.1
t/: 01basic.t  02indent.t  03compressed.t  05sort_files.t  tapsig
